<resources>
    <string name="app_name">IMCCalculator</string>

    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="fragment_calculator_weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-Calcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="fragment_calculator_tvcm">%1$d cm</string>

</resources>